# bcy-scraper

./: .gitignore  README.md  dedupe_files.py  demo.txt  extract_ids.py  main.py  pyproject.toml
assets/: bcy_demo_handles.txt
bcy_scraper/: folder_handler.py  gdl_runner.py
user_info/: 1816873526631854###YADA__info.json
